ssimby extracting done, just need airport data joining

--- a/.gitignore
+++ b/.gitignore
@@ -103,4 +103,5 @@ venv.bak/
 # mypy
 .mypy_cache/
 test-files/sample-output.txt
-ssimby/samplefiles/ssim-example.ssimx
+ssimby/samplefiles/
+ssimby/samplefiles/
